[tool.poetry]
name = "ping-server"
version = "0.1.0"
description = ""
authors = ["amaheshwari01 <acoding2007@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
waitress = "^2.1.2"
pyicloud = {git = "https://github.com/timlaing/pyicloud.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
